--- a/src/main/resources/layouts/SimpleGui.fxml
+++ b/src/main/resources/layouts/SimpleGui.fxml
@@ -1,17 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.layout.Pane?>
 
-<HBox xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" 
-fx:controller="it.unibo.samplejavafx.JavaFXAppWithFXMLController">
-	<children>
-	   <Button fx:id="myButton" onMouseClicked="#myButtonOnClickHandler" prefHeight="116.0" prefWidth="242.0" text="HELLO FXML" textFill="#4a4dff">
-         <font>
-            <Font size="26.0" />
-         </font></Button>
-	   <Label fx:id="myLabel" text="Hold on there" />
-	</children>
-</HBox>
+
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" style="-fx-background-image: url(/Images/MainMenu4c.jpg); -fx-background-size: 100% 100%;" minHeight="-Infinity" minWidth="-Infinity"  xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+   <children>
+      <Button layoutX="238.0" layoutY="187.0" mnemonicParsing="false" text="Button" />
+   </children>
+</Pane>
