--- a/src/main/resources/layouts/MainMenuGui.fxml
+++ b/src/main/resources/layouts/MainMenuGui.fxml
@@ -11,30 +11,30 @@
    <children>
       <ImageView fitHeight="1080.0" fitWidth="1920.0" opacity="0.8">
          <image>
-            <Image url="@../images/MainMenu4c.jpg" />
+            <Image url="@../images/MainMenu1c.jpg" />
          </image>
       </ImageView>
-      <Button id="playButton" fx:id="playButton" layoutX="768.0" layoutY="753.0" lineSpacing="1.0" mnemonicParsing="false" prefHeight="181.0" prefWidth="417.0" style="-fx-background-color: #953205; -fx-cursor: black;" text="PLAY" textAlignment="CENTER" textFill="WHITE" textOverrun="CLIP" AnchorPane.leftAnchor="768.0" AnchorPane.rightAnchor="735.0" AnchorPane.topAnchor="753.0">
+      <Button id="playButton" fx:id="playButton" layoutX="768.0" layoutY="753.0" lineSpacing="1.0" mnemonicParsing="false" prefHeight="181.0" prefWidth="417.0" style="-fx-background-color: #953205;" text="PLAY" textAlignment="CENTER" textFill="WHITE" textOverrun="CLIP" AnchorPane.leftAnchor="768.0" AnchorPane.rightAnchor="735.0" AnchorPane.topAnchor="753.0">
          <font>
             <Font name="Verdana" size="48.0" />
          </font>
       </Button>
-      <Button id="playButton" layoutX="32.0" layoutY="271.0" lineSpacing="1.0" mnemonicParsing="false" prefHeight="120.0" prefWidth="457.0" style="-fx-background-color: #953205; -fx-cursor: black;" text="Card Creation" textAlignment="CENTER" textFill="WHITE" textOverrun="CLIP" AnchorPane.bottomAnchor="689.0" AnchorPane.leftAnchor="32.0" AnchorPane.topAnchor="271.0">
+      <Button id="playButton" layoutX="32.0" layoutY="271.0" lineSpacing="1.0" mnemonicParsing="false" prefHeight="120.0" prefWidth="457.0" style="-fx-background-color: #953205;" text="Card Creation" textAlignment="CENTER" textFill="WHITE" textOverrun="CLIP" AnchorPane.bottomAnchor="689.0" AnchorPane.leftAnchor="32.0" AnchorPane.topAnchor="271.0">
          <font>
             <Font name="Verdana" size="48.0" />
          </font>
       </Button>
-      <Button id="playButton" layoutX="32.0" layoutY="420.0" lineSpacing="1.0" mnemonicParsing="false" prefHeight="120.0" prefWidth="457.0" style="-fx-background-color: #953205; -fx-cursor: black;" text="Deck" textAlignment="CENTER" textFill="WHITE" textOverrun="CLIP" AnchorPane.bottomAnchor="540.0" AnchorPane.leftAnchor="32.0" AnchorPane.topAnchor="420.0">
+      <Button id="playButton" layoutX="32.0" layoutY="420.0" lineSpacing="1.0" mnemonicParsing="false" prefHeight="120.0" prefWidth="457.0" style="-fx-background-color: #953205;" text="Deck" textAlignment="CENTER" textFill="WHITE" textOverrun="CLIP" AnchorPane.bottomAnchor="540.0" AnchorPane.leftAnchor="32.0" AnchorPane.topAnchor="420.0">
          <font>
             <Font name="Verdana" size="48.0" />
          </font>
       </Button>
-      <Button id="playButton" layoutX="32.0" layoutY="566.0" lineSpacing="1.0" mnemonicParsing="false" opacity="0.97" prefHeight="120.0" prefWidth="457.0" style="-fx-background-color: #953205; -fx-cursor: black;" text="Rules" textAlignment="CENTER" textFill="WHITE" textOverrun="CLIP">
+      <Button id="playButton" layoutX="32.0" layoutY="566.0" lineSpacing="1.0" mnemonicParsing="false" opacity="0.97" prefHeight="120.0" prefWidth="457.0" style="-fx-background-color: #953205" text="Rules" textAlignment="CENTER" textFill="WHITE" textOverrun="CLIP">
          <font>
             <Font name="Verdana" size="48.0" />
          </font>
       </Button>
-      <Button id="playButton" fx:id="playButton1" layoutX="819.0" layoutY="943.0" lineSpacing="1.0" mnemonicParsing="false" opacity="0.91" prefHeight="95.0" prefWidth="315.0" style="-fx-background-color: #953205; -fx-cursor: black;" text="Settings" textAlignment="CENTER" textFill="WHITE" textOverrun="CLIP">
+      <Button id="playButton" fx:id="playButton1" layoutX="819.0" layoutY="943.0" lineSpacing="1.0" mnemonicParsing="false" opacity="0.91" prefHeight="95.0" prefWidth="315.0" style="-fx-background-color: #953205;" text="Settings" textAlignment="CENTER" textFill="WHITE" textOverrun="CLIP">
          <font>
             <Font name="Verdana" size="48.0" />
          </font>
