--- a/src/main/resources/layouts/SettingsGui.fxml
+++ b/src/main/resources/layouts/SettingsGui.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1080.0" prefWidth="1920.0" stylesheets="@../css/SettingsGui.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" >
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1080.0" prefWidth="1920.0" stylesheets="@../css/SettingsGui.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.fxml.Settings">
    <children>
       <ImageView fitHeight="1088.0" fitWidth="1920.0" layoutX="1.0" layoutY="-6.0">
          <image>
@@ -23,7 +23,7 @@
             <Font size="36.0" />
          </font>
       </Button>
-      <Button id="returnButton" fx:id="returnButton" layoutX="915.0" layoutY="743.0" mnemonicParsing="false" text="Return" textAlignment="CENTER">
+      <Button id="backButton" fx:id="backButton" layoutX="915.0" onAction="#backToMainMenu" layoutY="743.0" mnemonicParsing="false" text="Back" textAlignment="CENTER">
          <font>
             <Font name="Verdana" size="48.0" />
          </font>
