--- a/src/main/resources/layouts/SettingsGui.fxml
+++ b/src/main/resources/layouts/SettingsGui.fxml
@@ -3,27 +3,20 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Slider?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1080.0" prefWidth="1920.0" stylesheets="@../css/SettingsGui.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.fxml.Settings">
+<AnchorPane id="panel" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1080.0" prefWidth="1920.0" stylesheets="@../css/SettingsGui.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.fxml.Settings">
    <children>
-      <ImageView fitHeight="1088.0" fitWidth="1920.0" layoutX="1.0" layoutY="-6.0">
-         <image>
-            <Image url="@../images/Settings1c.jpg" />
-         </image>
-      </ImageView>
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#cca9b4cc" height="736.0" layoutX="485.0" layoutY="172.0" opacity="0.59" stroke="BLACK" strokeType="INSIDE" width="1061.0" AnchorPane.leftAnchor="485.0" AnchorPane.topAnchor="172.0" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#cca9b4cc" height="736.0" layoutX="485.0" layoutY="172.0" opacity="0.59" stroke="BLACK" strokeType="INSIDE" width="1061.0" />
       <Slider id="musicAudioLevelSlider" fx:id="musicAudioLevelSlider" layoutX="1000.0" layoutY="515.0" prefHeight="46.0" prefWidth="401.0" showTickMarks="true" value="50.0" AnchorPane.leftAnchor="1000.0" AnchorPane.topAnchor="515.0" />
-      <Button id="toggleFullScreenButton" fx:id="toggleFullScreenButton" layoutX="1000.0" layoutY="414.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="401.0" text="Enable/Disable" AnchorPane.leftAnchor="1000.0" AnchorPane.topAnchor="414.0">
+      <Button id="toggleFullScreenButton" fx:id="toggleFullScreenButton" layoutX="1000.0" layoutY="414.0" mnemonicParsing="false" onAction="#toggleFullScreen" prefHeight="38.0" prefWidth="401.0" text="Enable/Disable" AnchorPane.leftAnchor="1000.0" AnchorPane.topAnchor="414.0">
          <font>
             <Font size="36.0" />
          </font>
       </Button>
-      <Button id="backButton" fx:id="backButton" layoutX="915.0" onAction="#backToMainMenu" layoutY="743.0" mnemonicParsing="false" text="Back" textAlignment="CENTER">
+      <Button id="backButton" fx:id="backButton" layoutX="915.0" layoutY="743.0" mnemonicParsing="false" onAction="#backToMainMenu" text="Back" textAlignment="CENTER">
          <font>
             <Font name="Verdana" size="48.0" />
          </font>
