--- a/src/main/resources/layouts/MainMenuGui.fxml
+++ b/src/main/resources/layouts/MainMenuGui.fxml
@@ -1,22 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
 
 <AnchorPane id="panel" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1080.0" prefWidth="1920.0" stylesheets="@../css/MainMenuGui.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.fxml.MainMenu">
    <children>
-      <Button id="playButton" fx:id="playButton" layoutX="768.0" layoutY="753.0" lineSpacing="1.0" mnemonicParsing="false" prefHeight="181.0" prefWidth="417.0" text="PLAY" textAlignment="CENTER" textOverrun="CLIP" AnchorPane.leftAnchor="768.0" AnchorPane.rightAnchor="735.0" AnchorPane.topAnchor="753.0">
+      <Button id="playButton" fx:id="playButton" layoutX="748.0" layoutY="755.0" lineSpacing="1.0" mnemonicParsing="false" prefHeight="181.0" prefWidth="417.0" text="PLAY" textAlignment="CENTER" textOverrun="CLIP" AnchorPane.leftAnchor="748.0" AnchorPane.rightAnchor="714.6666666666667">
       </Button>
-      <Button id="playButton" layoutX="32.0" layoutY="271.0" lineSpacing="1.0" mnemonicParsing="false" prefHeight="120.0" prefWidth="457.0" text="Card Creation" textAlignment="CENTER" textOverrun="CLIP" AnchorPane.bottomAnchor="689.0" AnchorPane.leftAnchor="32.0" AnchorPane.topAnchor="271.0">
+      <Button id="playButton" layoutX="32.0" layoutY="271.0" lineSpacing="1.0" mnemonicParsing="false" prefHeight="120.0" prefWidth="457.0" text="Card Creation" textAlignment="CENTER" textOverrun="CLIP">
       </Button>
-      <Button id="playButton" layoutX="32.0" layoutY="420.0" lineSpacing="1.0" mnemonicParsing="false" prefHeight="120.0" prefWidth="457.0" text="Deck" textAlignment="CENTER" textOverrun="CLIP" AnchorPane.bottomAnchor="540.0" AnchorPane.leftAnchor="32.0" AnchorPane.topAnchor="420.0">
+      <Button id="playButton" layoutX="32.0" layoutY="420.0" lineSpacing="1.0" mnemonicParsing="false" prefHeight="120.0" prefWidth="457.0" text="Deck" textAlignment="CENTER" textOverrun="CLIP">
       </Button>
-      <Button id="playButton" layoutX="32.0" layoutY="566.0" lineSpacing="1.0" mnemonicParsing="false" opacity="0.97" prefHeight="120.0" prefWidth="457.0" text="Rules" textAlignment="CENTER" textOverrun="CLIP">
+      <Button id="playButton" layoutX="32.0" layoutY="567.0" lineSpacing="1.0" mnemonicParsing="false" opacity="0.97" prefHeight="120.0" prefWidth="457.0" text="Rules" textAlignment="CENTER" textOverrun="CLIP">
       </Button>
-      <Button id="settingsButton" fx:id="settingsButton" layoutX="819.0" layoutY="943.0" lineSpacing="1.0" mnemonicParsing="false" onAction="#openSettings" opacity="0.91" prefHeight="95.0" prefWidth="315.0" text="Settings" textAlignment="CENTER" textOverrun="CLIP">
+      <Button id="settingsButton" fx:id="settingsButton" layoutX="821.0" layoutY="954.0" lineSpacing="1.0" mnemonicParsing="false" onAction="#openSettings" opacity="0.91" prefHeight="95.0" prefWidth="311.0" text="Settings" textAlignment="CENTER" textOverrun="CLIP" AnchorPane.leftAnchor="821.0" AnchorPane.rightAnchor="788.0">
       </Button>
    </children>
 </AnchorPane>
