--- a/src/main/resources/layouts/SettingsGui.fxml
+++ b/src/main/resources/layouts/SettingsGui.fxml
@@ -9,7 +9,7 @@
 
 <AnchorPane id="panel" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1080.0" prefWidth="1920.0" stylesheets="@../css/SettingsGui.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.fxml.Settings">
    <children>
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#cca9b4cc" height="736.0" layoutX="485.0" layoutY="172.0" opacity="0.59" stroke="BLACK" strokeType="INSIDE" width="1061.0" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#cca9b4cc" height="736.0" layoutX="470.0" layoutY="172.0" opacity="0.59" stroke="BLACK" strokeType="INSIDE" width="1061.0" AnchorPane.bottomAnchor="172.0" AnchorPane.leftAnchor="470.0" AnchorPane.rightAnchor="389.0" AnchorPane.topAnchor="172.0" />
       <Slider id="musicAudioLevelSlider" fx:id="musicAudioLevelSlider" layoutX="1000.0" layoutY="515.0" prefHeight="46.0" prefWidth="401.0" showTickMarks="true" value="50.0" AnchorPane.leftAnchor="1000.0" AnchorPane.topAnchor="515.0" />
       <Button id="toggleFullScreenButton" fx:id="toggleFullScreenButton" layoutX="1000.0" layoutY="414.0" mnemonicParsing="false" onAction="#toggleFullScreen" prefHeight="38.0" prefWidth="401.0" text="Enable/Disable" AnchorPane.leftAnchor="1000.0" AnchorPane.topAnchor="414.0">
          <font>
