--- a/src/main/resources/layouts/MainMenuGui.fxml
+++ b/src/main/resources/layouts/MainMenuGui.fxml
@@ -2,6 +2,8 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import controller.sound.SoundButton?>
+
 
 <AnchorPane id="panel" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1080.0" prefWidth="1920.0" stylesheets="@../css/MainMenuGui.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.fxml.MainMenu">
    <children>
@@ -13,7 +15,7 @@
       </Button>
       <Button id="playButton" layoutX="32.0" layoutY="567.0" lineSpacing="1.0" mnemonicParsing="false" opacity="0.97" prefHeight="120.0" prefWidth="457.0" text="Rules" textAlignment="CENTER" textOverrun="CLIP">
       </Button>
-      <Button id="settingsButton" fx:id="settingsButton" layoutX="821.0" layoutY="954.0" lineSpacing="1.0" mnemonicParsing="false" onAction="#openSettings" opacity="0.91" prefHeight="95.0" prefWidth="311.0" text="Settings" textAlignment="CENTER" textOverrun="CLIP" AnchorPane.leftAnchor="821.0" AnchorPane.rightAnchor="788.0">
-      </Button>
+      <SoundButton id="settingsButton" fx:factory="create" fx:id="settingsButton" layoutX="821.0" layoutY="954.0" lineSpacing="1.0" mnemonicParsing="false" onAction="#openSettings" opacity="0.91" prefHeight="95.0" prefWidth="311.0" text="Settings" textAlignment="CENTER" textOverrun="CLIP" AnchorPane.leftAnchor="821.0" AnchorPane.rightAnchor="788.0">
+      </SoundButton>
    </children>
 </AnchorPane>
