--- a/src/main/resources/layouts/MainMenuGui.fxml
+++ b/src/main/resources/layouts/MainMenuGui.fxml
@@ -4,18 +4,13 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import controller.sound.SoundButton?>
 
-
-<AnchorPane id="panel" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1080.0" prefWidth="1920.0" stylesheets="@../css/MainMenuGui.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.fxml.MainMenu">
+<AnchorPane id="panel" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" stylesheets="@../css/MainMenuGui.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.fxml.MainMenu">
    <children>
-      <Button id="playButton" fx:id="playButton" layoutX="748.0" layoutY="755.0" lineSpacing="1.0" mnemonicParsing="false" prefHeight="181.0" prefWidth="417.0" text="PLAY" textAlignment="CENTER" textOverrun="CLIP" AnchorPane.leftAnchor="748.0" AnchorPane.rightAnchor="714.6666666666667">
-      </Button>
-      <Button id="playButton" layoutX="32.0" layoutY="271.0" lineSpacing="1.0" mnemonicParsing="false" prefHeight="120.0" prefWidth="457.0" text="Card Creation" textAlignment="CENTER" textOverrun="CLIP">
-      </Button>
-      <SoundButton id="decksButton" fx:factory="create" fx:id="decksButton" onAction="#openDeckManagement" layoutX="32.0" layoutY="420.0" lineSpacing="1.0" mnemonicParsing="false" opacity="0.97" prefHeight="120.0" prefWidth="457.0" text="Decks" textAlignment="CENTER" textOverrun="CLIP">
-      </SoundButton>
-      <SoundButton id="rulesButton" fx:factory="create" fx:id="rulesButton" onAction="#openRules" layoutX="32.0" layoutY="567.0" lineSpacing="1.0" mnemonicParsing="false" opacity="0.97" prefHeight="120.0" prefWidth="457.0" text="Rules" textAlignment="CENTER" textOverrun="CLIP">
-      </SoundButton>
-      <SoundButton id="settingsButton" fx:factory="create" fx:id="settingsButton" onAction="#openSettings" layoutX="821.0" layoutY="954.0" lineSpacing="1.0" mnemonicParsing="false"  opacity="0.91" prefHeight="95.0" prefWidth="311.0" text="Settings" textAlignment="CENTER" textOverrun="CLIP" AnchorPane.leftAnchor="821.0" AnchorPane.rightAnchor="788.0">
-      </SoundButton>
+      <SoundButton id="decksButton" fx:factory="create" fx:id="decksButton" onAction="#openDeckManagement" layoutX="40.0" layoutY="240.0" lineSpacing="1.0" mnemonicParsing="false" opacity="0.97" prefHeight="80.0" prefWidth="200.0" text="Decks" textAlignment="CENTER" textOverrun="CLIP" AnchorPane.leftAnchor="40.0" AnchorPane.topAnchor="240.0" />
+      <Button id="cardsButton" fx:id="cardsButton" layoutX="40.0" layoutY="340.0" lineSpacing="1.0" mnemonicParsing="false" opacity="0.97" prefHeight="80.0" prefWidth="200.0" text="Cards" textAlignment="CENTER" textOverrun="CLIP" AnchorPane.leftAnchor="40.0" AnchorPane.topAnchor="340.0" />
+      <SoundButton id="rulesButton" fx:factory="create" fx:id="rulesButton" onAction="#openRules" layoutX="40.0" layoutY="440.0" lineSpacing="1.0" mnemonicParsing="false" opacity="0.97" prefHeight="80.0" prefWidth="200.0" text="Rules" textAlignment="CENTER" textOverrun="CLIP" AnchorPane.leftAnchor="40.0" AnchorPane.topAnchor="440.0" />
+      <Button id="playButton" fx:id="playButton" layoutX="540.0" layoutY="280.0" lineSpacing="1.0" mnemonicParsing="false" prefHeight="160.0" prefWidth="200.0" text="PLAY" textAlignment="CENTER" textOverrun="CLIP" AnchorPane.leftAnchor="540.0" AnchorPane.topAnchor="280.0" />
+      <SoundButton id="settingsButton" fx:factory="create" fx:id="settingsButton" onAction="#openSettings" layoutX="540.0" layoutY="440.0" lineSpacing="1.0" mnemonicParsing="false" opacity="0.91" prefHeight="80.0" prefWidth="200.0" text="Settings" textAlignment="CENTER" textOverrun="CLIP" AnchorPane.leftAnchor="540.0" AnchorPane.topAnchor="440.0" />
    </children>
 </AnchorPane>
+
