--- a/src/main/resources/layouts/RulesGui.fxml
+++ b/src/main/resources/layouts/RulesGui.fxml
@@ -1,52 +1,61 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Tab?>
-<?import javafx.scene.control.TabPane?>
-<?import javafx.scene.effect.Glow?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-
-<BorderPane id="panel" prefHeight="1080.0" prefWidth="1920.0" stylesheets="@../css/RulesGui.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.fxml.Rules">
-   <center>
-      <TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="998.0" prefWidth="1920.0" tabClosingPolicy="UNAVAILABLE">
-        <tabs>
-          <Tab text="Card Creation">
-            <content>
-              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-            </content>
-          </Tab>
-          <Tab text="Deck Management">
-            <content>
-              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-            </content>
-          </Tab>
-            <Tab text="Match">
-               <content>
-                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-               </content>
-            </Tab>
-        </tabs>
-         <effect>
-            <Glow />
-         </effect>
-      </TabPane>
-   </center>
-   <top>
-      <Label id="title" text="Rules" textFill="WHITE" BorderPane.alignment="CENTER">
-         <BorderPane.margin>
-            <Insets />
-         </BorderPane.margin>
-      </Label>
-   </top>
-   <bottom>
-      <Button fx:id="returnButton" mnemonicParsing="false" onAction="#backToMainMenu" prefHeight="15.0" prefWidth="551.0" styleClass="returnButton" text="Back" BorderPane.alignment="CENTER">
-         <BorderPane.margin>
-            <Insets bottom="10.0" />
-         </BorderPane.margin>
-      </Button>
-   </bottom>
-</BorderPane>
+<VBox  id="panel" xmlns="http://javafx.com/javafx/8" stylesheets="@../css/RulesGui.css" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.fxml.Rules">
+  <children>
+    <Button mnemonicParsing="false" onAction="#backToMainMenu" text="Indietro" />
+    <TabPane fx:id="tabPane" prefHeight="720.0" prefWidth="1280.0">
+      <tabs>
+        <Tab text="Fase 1">
+          <content>
+            <SplitPane dividerPositions="0.5">
+              <items>
+                <AnchorPane>
+                  <children>
+                    <Text layoutX="14.0" layoutY="44.0" text="Regolamento per la fase 1..." wrappingWidth="600.0" />
+                  </children>
+                </AnchorPane>
+                <AnchorPane>
+                  <children>
+                    <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="14.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
+                      <image>
+                        <Image url="@../images/CardCreation.jpg" />
+                      </image>
+                    </ImageView>
+                  </children>
+                </AnchorPane>
+              </items>
+            </SplitPane>
+          </content>
+        </Tab>
+        <Tab text="Fase 1">
+      <content>
+        <SplitPane dividerPositions="0.5">
+          <items>
+            <AnchorPane>
+              <children>
+                <Text layoutX="14.0" layoutY="44.0" text="Regolamento per la fase 1..." wrappingWidth="600.0" />
+              </children>
+            </AnchorPane>
+            <AnchorPane>
+              <children>
+                <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="14.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
+                  <image>
+                    <Image url="@../images/DeckManagement.jpg" />
+                  </image>
+                </ImageView>
+              </children>
+            </AnchorPane>
+          </items>
+        </SplitPane>
+      </content>
+    </Tab>
+    <!-- Aggiungi altre schede qui -->
+      </tabs>
+    </TabPane>
+  </children>
+</VBox>
