--- a/src/main/resources/layouts/DeckManagementGui.fxml
+++ b/src/main/resources/layouts/DeckManagementGui.fxml
@@ -1,52 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Tab?>
-<?import javafx.scene.control.TabPane?>
-<?import javafx.scene.effect.Glow?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.Separator?>
+<?import javafx.scene.layout.Pane?>
 
 
-<BorderPane id="panel" prefHeight="1080.0" prefWidth="1920.0" stylesheets="@../css/DeckManagementGui.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.fxml.DeckManagement">
-   <center>
-      <TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="998.0" prefWidth="1920.0" tabClosingPolicy="UNAVAILABLE">
-        <tabs>
-          <Tab text="Card Creation">
-            <content>
-              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-            </content>
-          </Tab>
-          <Tab text="Deck Management">
-            <content>
-              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-            </content>
-          </Tab>
-            <Tab text="Match">
-               <content>
-                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-               </content>
-            </Tab>
-        </tabs>
-         <effect>
-            <Glow />
-         </effect>
-      </TabPane>
-   </center>
-   <top>
-      <Label id="title" text="Rules" textFill="WHITE" BorderPane.alignment="CENTER">
-         <BorderPane.margin>
-            <Insets />
-         </BorderPane.margin>
-      </Label>
-   </top>
-   <bottom>
-      <Button fx:id="backButton" mnemonicParsing="false" onAction="#backToMainMenu" prefHeight="15.0" prefWidth="551.0" styleClass="backButton" text="Back" BorderPane.alignment="CENTER">
-         <BorderPane.margin>
-            <Insets bottom="10.0" />
-         </BorderPane.margin>
-      </Button>
-   </bottom>
-</BorderPane>
+<Pane id="panel" stylesheets="@../css/DeckManagementGui.css"  xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.fxml.DeckManagement">
+   <children>
+      <Pane layoutX="200.0" layoutY="94.0" prefHeight="200.0" prefWidth="200.0">
+         <children>
+            <Button layoutX="74.0" layoutY="161.0" mnemonicParsing="false" text="Save" />
+         </children>
+      </Pane>
+      <Separator layoutX="456.0" orientation="VERTICAL" prefHeight="400.0" prefWidth="14.0" />
+      <ListView layoutX="470.0" prefHeight="400.0" prefWidth="130.0" />
+      <ListView prefHeight="400.0" prefWidth="130.0" />
+      <Separator layoutX="130.0" layoutY="-6.0" orientation="VERTICAL" prefHeight="400.0" prefWidth="14.0" />
+      <Button fx:id="backButton" onAction="#backToMainMenu" layoutX="274.0" layoutY="361.0" mnemonicParsing="false" text="Back" />
+   </children>
+</Pane>
