--- a/src/main/resources/layouts/DeckManagementGui.fxml
+++ b/src/main/resources/layouts/DeckManagementGui.fxml
@@ -2,21 +2,18 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ListView?>
-<?import javafx.scene.control.Separator?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 
-
-<Pane id="panel" stylesheets="@../css/DeckManagementGui.css"  xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.fxml.DeckManagement">
+<AnchorPane id="panel" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.fxml.DeckManagement">
    <children>
-      <Pane layoutX="200.0" layoutY="94.0" prefHeight="200.0" prefWidth="200.0">
+      <Pane layoutX="228.0" layoutY="37.0" prefHeight="599.0" prefWidth="825.0" AnchorPane.bottomAnchor="134.0" AnchorPane.leftAnchor="228.0" AnchorPane.rightAnchor="227.0" AnchorPane.topAnchor="37.0">
          <children>
-            <Button layoutX="74.0" layoutY="161.0" mnemonicParsing="false" text="Save" />
+            <Button layoutX="392.0" layoutY="478.0" mnemonicParsing="false" text="Save" />
          </children>
       </Pane>
-      <Separator layoutX="456.0" orientation="VERTICAL" prefHeight="400.0" prefWidth="14.0" />
-      <ListView layoutX="470.0" prefHeight="400.0" prefWidth="130.0" />
-      <ListView prefHeight="400.0" prefWidth="130.0" />
-      <Separator layoutX="130.0" layoutY="-6.0" orientation="VERTICAL" prefHeight="400.0" prefWidth="14.0" />
-      <Button fx:id="backButton" onAction="#backToMainMenu" layoutX="274.0" layoutY="361.0" mnemonicParsing="false" text="Back" />
+      <ListView layoutX="-2.0" layoutY="-5.0" prefHeight="775.0" prefWidth="169.0" AnchorPane.bottomAnchor="1.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="1111.0" AnchorPane.topAnchor="0.0" />
+      <ListView layoutX="1111.0" prefHeight="769.0" prefWidth="169.0" AnchorPane.bottomAnchor="1.0" AnchorPane.leftAnchor="1111.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+      <Button fx:id="backButton" layoutX="620.0" layoutY="619.0" mnemonicParsing="false" onAction="#backToMainMenu" text="Back" />
    </children>
-</Pane>
+</AnchorPane>
