--- a/src/main/resources/layouts/DeckManagementGui.fxml
+++ b/src/main/resources/layouts/DeckManagementGui.fxml
@@ -3,17 +3,22 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.VBox?>
 
 <AnchorPane id="panel" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.fxml.DeckManagement">
    <children>
-      <Pane layoutX="228.0" layoutY="37.0" prefHeight="599.0" prefWidth="825.0" AnchorPane.bottomAnchor="134.0" AnchorPane.leftAnchor="228.0" AnchorPane.rightAnchor="227.0" AnchorPane.topAnchor="37.0">
+      <ListView layoutX="-2.0" layoutY="-5.0" prefHeight="720.0" prefWidth="169.0" AnchorPane.bottomAnchor="1.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="1111.0" AnchorPane.topAnchor="0.0" />
+      <ListView fx:id="rightlist" layoutX="1111.0" prefHeight="720.0" prefWidth="169.0" AnchorPane.bottomAnchor="1.0" AnchorPane.leftAnchor="1111.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+      <VBox layoutX="556.0" prefHeight="686.0" prefWidth="169.0">
          <children>
-            <Button layoutX="392.0" layoutY="478.0" mnemonicParsing="false" text="Save" />
+            <ListView prefHeight="592.0" prefWidth="169.0" />
+            <AnchorPane prefHeight="94.0" prefWidth="169.0">
+               <children>
+                  <Button layoutX="64.0" layoutY="14.0" mnemonicParsing="false" text="Save" />
+                  <Button fx:id="backButton" layoutX="64.0" layoutY="55.0" mnemonicParsing="false" onAction="#backToMainMenu" text="Back" />
+               </children>
+            </AnchorPane>
          </children>
-      </Pane>
-      <ListView layoutX="-2.0" layoutY="-5.0" prefHeight="775.0" prefWidth="169.0" AnchorPane.bottomAnchor="1.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="1111.0" AnchorPane.topAnchor="0.0" />
-      <ListView layoutX="1111.0" prefHeight="769.0" prefWidth="169.0" AnchorPane.bottomAnchor="1.0" AnchorPane.leftAnchor="1111.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-      <Button fx:id="backButton" layoutX="620.0" layoutY="619.0" mnemonicParsing="false" onAction="#backToMainMenu" text="Back" />
+      </VBox>
    </children>
 </AnchorPane>
