--- a/src/main/resources/layouts/MatchGui.fxml
+++ b/src/main/resources/layouts/MatchGui.fxml
@@ -5,10 +5,9 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
-<?import controller.sound.SoundButton?>
 
 <AnchorPane id="panel" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" stylesheets="@../css/MatchGui.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.fxml.Match">
    <children>
-      <SoundButton id="backButton" fx:factory="create" fx:id="backButton" layoutX="575.0" layoutY="470.0" mnemonicParsing="false" onAction="#backToMainMenu" text="Back" textAlignment="CENTER"/>
+      <Button id="backButton" fx:id="backButton" layoutX="575.0" layoutY="470.0" mnemonicParsing="false" text="Back" textAlignment="CENTER"/>
    </children>
 </AnchorPane>
