[SETTINGS TEST] Implemented SettingsTest

--- a/src/main/resources/layouts/SettingsGui.fxml
+++ b/src/main/resources/layouts/SettingsGui.fxml
@@ -19,6 +19,6 @@
       <Label layoutX="275.0" layoutY="287.0" text="Select Main Music" />
       <Label layoutX="275.0" layoutY="389.0" text="Select Battle Music " />
       <ChoiceBox fx:id="choiceMainTheme" layoutX="275.0" layoutY="331.0" prefHeight="58.0" prefWidth="341.0" />
-      <ChoiceBox fx:id="choicheBattleTheme" layoutX="275.0" layoutY="427.0" prefHeight="58.0" prefWidth="341.0" />
+      <ChoiceBox fx:id="choiceMatchTheme" layoutX="275.0" layoutY="427.0" prefHeight="58.0" prefWidth="341.0" />
    </children>
 </AnchorPane>
